# devops-master-project

./: .gitignore  .pre-commit-config.yaml  README.md  mise.toml
.github/workflows/: backend-tests.yaml  docker-build-push.yaml  release-please.yaml  update-gitops.yaml
scripts/: setup_project
src/backend/: CHANGELOG.md  Dockerfile  pyproject.toml
src/frontend/: CHANGELOG.md  Dockerfile  pyproject.toml
src/frontend/src/frontend/: main.py
